# test_proj

./: CMakeLists.txt  README
src/: crc32.cpp  crc32.hpp  proto.hpp
src/client/: client.cpp  client.hpp  main.cpp
src/server/: main.cpp  server.cpp  server.hpp
